Lots of changes: - Draw persons/apples on separate canvas that is on top of the one for house - Houses are painted as rectangle and show stored apples - Person: Store targets by position, not by object - Fix bug where a person would follow an apple in the inventory of another person - Persons will pick another apple if the one they went for is gone by the time they get there - Implement hitboxes so that apples don't overlap houses and each other - ...

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,14 @@ canvas {
   outline: none;
   -webkit-tap-highlight-color: transparent;
   display: block;
-  background-color: lightgrey;
+  position: absolute;
 }
+
+.canvas-wrapper {
+  background-color: lightgrey;
+  height: 500px;
+}
+
 .pointer {
   cursor: pointer;
 }
@@ -28,7 +34,7 @@ h3 {
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  /* max-width: 400px; */
   max-height: 800px;
   margin: 0 auto;
 }
@@ -55,7 +61,7 @@ h3 {
 }
 
 .canvas-wrapper {
-  flex: 1;
+  width: 500px;
 }
 
 .finish-game-screen {
